--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+
+
+ /* * {
+    font-family: Helvetica, Arial, sans-serif !important;
+    font-weight: 200 !important;
+  } 
+  
+  html, body {
+    
+    background: white !important;
+    margin: 20px !important; 
+    color: #3e4144 !important;
+    -webkit-font-smoothing: antialiased !important;
+    font-size: 0.9rem !important ;
+  } 
+  
+  
+  dd {
+    font-weight: bold !important;
+  }
+  
+  button {
+    background-color: #3D8361 !important;
+    border-radius: 5px !important;
+    border: 0px !important;
+    color: white !important;
+    cursor: pointer !important;
+    margin-right: 5px !important;
+    margin-left: 5px !important;
+    padding: 5px 10px !important;
+  }
+  
+  button:hover {
+    background-color: #3e4144 !important;
+  }
+  
+  button:focus{ 
+    outline: none !important
+  }
+  
+  .p-1 {
+    padding: 1px !important;
+  } */
